DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Statement__c/Demo_Statement__c.object-meta.xml
<CustomObject>
    <label>Demo Statement</label>
    <pluralLabel>Demo Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Statement Number</label>
        <type>Text</type>
    </nameField>
</CustomObject>