DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Statement__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <type>Text</type>
    <length>40</length>
</CustomField>