DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Statement__c/fields/Closing_Balance__c.field-meta.xml
<CustomField>
    <fullName>Closing_Balance__c</fullName>
    <label>Closing Balance</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>