DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Statement__c/fields/Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Opening_Balance__c</fullName>
    <label>Opening Balance</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>