DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Statement__c/fields/Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Statement_Date__c</fullName>
    <label>Statement Date</label>
    <type>Date</type>
</CustomField>