DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Statement__c/fields/Statement_Period__c.field-meta.xml
<CustomField>
    <fullName>Statement_Period__c</fullName>
    <label>Statement Period</label>
    <type>Text</type>
    <length>60</length>
</CustomField>