DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Statement__c/fields/Total_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposits__c</fullName>
    <label>Total Deposits</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>